--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
+    "@react-native-community/netinfo": "^5.9.7",
+    "aws-amplify": "^3.3.3",
+    "aws-amplify-react-native": "^4.2.7",
     "expo": "~39.0.2",
+    "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
